fix: overflow for index layout

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -102,16 +102,19 @@
   @media #{$tablet-min} {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    padding-left: 310px;
   }
 
   @media #{$desktop-min} {
     @include c;
     width: 890px;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
+    display: grid;
+    grid-template: 1fr / repeat(3, 1fr);
+    justify-items: center;
+    grid-column-gap: 70px;
+    grid-row-gap: 30px;
     margin-top: -62px;
+    padding-left: 0;
   }
 }
 
