--- a/source/sass/blocks/button-round.scss
+++ b/source/sass/blocks/button-round.scss
@@ -9,4 +9,5 @@
   font-weight: bold;
   line-height: 1;
   text-decoration: none;
+  word-wrap: break-word;
 }
