--- a/source/sass/blocks/button-square.scss
+++ b/source/sass/blocks/button-square.scss
@@ -14,6 +14,7 @@
   line-height: 1;
   text-decoration: none;
   text-transform: uppercase;
+  word-wrap: break-word;
 
   &:hover {
     background-color: $basic-green-hover;
