--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -94,6 +94,7 @@
     display: grid;
     grid-template: 1fr / 1fr 1fr 1fr;
     align-items: start;
+    justify-content: center;
     margin-top: 10px;
   }
 }
