--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -24,7 +24,7 @@
   }
 
   @media #{$tablet-min} {
-    justify-self: end;
+    padding-top: 10px;
     margin: 0;
   }
 }
